# chiararelevat.fr

./: .gitignore  README.md  app.py  makefile  pyproject.toml
data/: academic-projects.json  education.json  experiences.json  istic_25_26.json
src/backend/services/: native_runner.py
src/c/: makefile
src/chiararelevat.fr/: __init__.py
src/ocaml/: makefile  playground_ocaml.ml
src/python/turring/: machine.py
src/turring/: machine.py
static/: base.css  cards.css  codeblock.css  index.css  projects.css  style.css  timeline.css
templates/: base.html  education.html  experiences.html  index.html  ocaml_runner.html  projects.html  teaching.html
test/turring/: incrementation_bin_test.py
tests/turring/: incrementation_bin_test.py
