[project]
name = "chiararelevat.fr"
version = "0.1.0"
description = ""
authors = [
    {name = "Chiara RELEVAT",email = "chiara.relevat@outlook.fr"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask (>=3.1.2,<4.0.0)"
]

[tool.poetry]
packages = [{include = "chiararelevat.fr", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
